--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
     </dependencies>
 
     <build>
-        <finalName>${artifactId}</finalName>
+        <finalName>${project.artifactId}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.tomee.maven</groupId>
